# coordinate_converter

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  SPEC.md  pyproject.toml  start_app.sh
.github/workflows/: ci.yml
docs/: cloud-run-cicd-plan.md
scripts/: start_app.sh
src/: __init__.py
src/app/: components.py  main.py  ui_builder.py  web_runner.py
src/app/map_view/: leaflet.html  leaflet_inline.html
src/cli/: csv_convert.py
src/core/: artifacts.py  crs_registry.py  height_rfn.py  height_swen17.py  helmert_rr92.py  parser.py  transform.py
src/ui/: __init__.py  layout.py  styles.py  theme.py
tests/: conftest.py  test_app_integration.py  test_copy_formatting.py  test_csv_cli.py  test_height_artifacts.py  test_height_rfn.py  test_helmert_rr92.py  test_mgrs_accuracy.py  test_parser.py  test_ui.py  test_ui_height_transformation.py
