[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinate-converter"
version = "0.1.0"
description = "Flet desktop app and CLI for Swedish coordinate transformations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Coordinate Converter Contributors" }]
dependencies = [
    "flet==0.27.6",
    "pyproj==3.7.0",
    "numpy==1.26.4",
    "mgrs==1.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "black==24.4.2",
    "ruff==0.1.9",
]

[project.urls]
Homepage = "https://example.com/coordinate-converter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
